--- a/src/components/Services/Services.css
+++ b/src/components/Services/Services.css
@@ -62,27 +62,29 @@ body {
     padding: 10%;
     margin-bottom: 7%;
     color: white;
-    border-radius: 500px;
+    border-radius: 1.5rem;
     font-size: 200%;
-    
+
 }
 
 @media only screen and (min-width: 300px) {
+
     /* For mobile phones: */
     .services-container {
-        grid-template-columns: auto ;
+        grid-template-columns: auto;
     }
 
     .head {
         flex-direction: column;
     }
-    
+
     .head .content {
         order: 1;
     }
-  }
+}
 
 @media only screen and (min-width: 600px) {
+
     /* For tablet: */
     .services-container {
         grid-template-columns: auto auto;
@@ -98,6 +100,7 @@ body {
 }
 
 @media only screen and (min-width: 961px) {
+
     /* For tablet: */
     .services-container {
         grid-template-columns: auto auto auto auto;
