--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,700;1,900&family=Fredoka+One&family=Lobster&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,800;0,900;1,200;1,400;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,500;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,500;0,600;0,700;1,500;1,600;1,700&display=swap");
 .home {
   background-color: #f6f8fb;
   padding: 100px 100px;
@@ -19,4 +20,30 @@
   padding: 13px;
   width: 160px;
   color: white;
+}
+
+.home .services-section {
+  font-family: "Rubik", sans-serif;
+  font-weight: 700;
+}
+
+.home .services-section .service {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  padding: 2%;
+  transition: 0.3s;
+}
+
+.home .service:hover {
+  transform: scale(1.2);
+  border-radius: 12px;
+  background-color: #00afdb;
+  color: white;
+}
+
+.icon-container {
+  border-radius: 50%;
 }
