--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,41 +1,83 @@
 @import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,700;1,900&family=Fredoka+One&family=Lobster&family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,800;0,900;1,200;1,400;1,600;1,700&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,700;0,800;1,300;1,400;1,500;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rubik:ital,wght@0,500;0,600;0,700;1,500;1,600;1,700&display=swap");
-.home {
+.head{
   background-color: #f6f8fb;
-  padding: 100px 100px;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.home h2 {
-  font-weight: bold;
-}
-
-.home p {
-  font-size: 1rem;
-}
-
-.home .services-section {
-  font-family: "Rubik", sans-serif;
-  font-weight: 700;
-}
-
-.home .service {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  margin-bottom: 70px;
+  justify-content: space-evenly;
+}
+.head-left .head{
+  background-color: #ffffff;
+}
+
+.head .content{
+  flex: 5 1 0px;
+  order: -1;
+  padding: 10% 5%;
+  text-align: justify;
+}
+
+.head .head-img {
+  flex: 6 1 0px;
+  display: flex;
   align-items: center;
-  text-align: center;
-  padding: 2%;
-  transition: 0.3s;
-  padding: 15px;
+  justify-content: center;
 }
 
-.home .service:hover {
-  transform: scale(1.2);
-  border-radius: 12px;
-  background-color: #00afdb;
-  color: white;
+.head-left .head .content {
+  order: 1;
 }
 
-.icon-container {
-  border-radius: 50%;
+.head-left .head-img {
+  flex: 3 1 0px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media only screen and (min-width: 300px) {
+
+  /* For mobile phones: */
+
+  .head {
+      flex-direction: column;
+  }
+
+  .head .content {
+      order: 1;
+  }
+
+  .head-img img {
+      width: 100%;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+
+  /* For tablet: */
+  .head {
+      flex-direction: column;
+  }
+
+  .head .content {
+      order: 1;
+  }
+  
+  .head-img img{
+      width: 100%;
+  }
+}
+
+@media only screen and (min-width: 961px) {
+
+  /* For tablet: */
+  
+  .head {
+      flex-direction: row;
+  }
+
+  .head .content {
+      order: -1;
+  }
+
+  
 }
